# DentScanCompare

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: ArchMetrics.cpp.5A469064F150B2B0.idx  ArchMetrics.h.3839E36B129DD4B7.idx  ColorMapLUT.cpp.14F9BDEDD6058939.idx  ColorMapLUT.h.C2A1F9ADA65352A9.idx  CurvatureAnalysis.cpp.ADCF502E1B04C3E5.idx  CurvatureAnalysis.h.C5164CD86F4DBA85.idx  DistanceField.cpp.FC31957E525E6E73.idx  DistanceField.h.FC03FDA31CC943C5.idx  GPAReference.cpp.54F29A66200BFFF6.idx  GPAReference.h.2F447D583696B132.idx  ICPRegistration.cpp.65011BC6D3EE608C.idx  ICPRegistration.h.E0CCC3F17CF54758.idx  MainWindow.cpp.2BE5FDAD6BEF5178.idx  MainWindow.h.BE13084865F2DDA8.idx  Mesh.h.1FF60DABF468E9FE.idx  MetricReport.h.C0450816A4641ED0.idx  MetricsTableWidget.cpp.1712E0D7FEAE9775.idx  MetricsTableWidget.h.28E0FEC6B8F7C65C.idx  ReportExporter.cpp.CD7E9496F7B83A72.idx  ReportExporter.h.787CB91E65B991D6.idx  STLReader.cpp.388643CAE834449D.idx  STLReader.h.563F645E0A84B58E.idx  ScatterPlotWidget.cpp.91AE207F485D437A.idx  ScatterPlotWidget.h.A48FBA85C294ED8B.idx  TessellationMetrics.cpp.3D17C124512ABCF8.idx  TessellationMetrics.h.AF2914F415910193.idx  VTKMeshWidget.cpp.F9FEF32B3BCA5C40.idx  VTKMeshWidget.h.16081D759851CDA1.idx  VTKSceneExporter.cpp.924DC66FCE90FF04.idx  VTKSceneExporter.h.C0BB04C11AF34EBD.idx  main.cpp.0772C40CF0418DFC.idx
docs/: developer-handoff.md  info-prepare-migration.txt  infos-linux-build.txt  interpretation.txt  manuscript.md
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: ArchMetrics.cpp  ArchMetrics.h  CurvatureAnalysis.cpp  CurvatureAnalysis.h  DistanceField.cpp  DistanceField.h  GPAReference.cpp  GPAReference.h  ICPRegistration.cpp  ICPRegistration.h  Mesh.h  MeshReader.cpp  MeshReader.h  MetricReport.h  STLReader.cpp  STLReader.h  TessellationMetrics.cpp  TessellationMetrics.h  ToothSegmentation.cpp  ToothSegmentation.h
src/export/: ReportExporter.cpp  ReportExporter.h  VTKSceneExporter.cpp  VTKSceneExporter.h
src/visualization/: ColorMapLUT.cpp  ColorMapLUT.h  MetricsTableWidget.cpp  MetricsTableWidget.h  ScatterPlotWidget.cpp  ScatterPlotWidget.h  VTKMeshWidget.cpp  VTKMeshWidget.h
